cmake_minimum_required(VERSION 3.1)

project(design_patterns)

add_subdirectory(01_AbstractFactory)
add_subdirectory(02_Builder)
add_subdirectory(03_Factory)
add_subdirectory(04_Prototype)
add_subdirectory(05_Singleton)
add_subdirectory(06_Adapter)
add_subdirectory(07_Bridge)
add_subdirectory(08_Composite)
add_subdirectory(09_Decorator)
add_subdirectory(10_Facade)