cmake_minimum_required(VERSION 3.1)

project(design_patterns)

add_subdirectory(01_AbstractFactory)
add_subdirectory(02_Builder)
add_subdirectory(03_Factory)
add_subdirectory(04_Prototype)
add_subdirectory(05_Singleton)
add_subdirectory(06_Adapter)
add_subdirectory(07_Bridge)
add_subdirectory(08_Composite)
add_subdirectory(09_Decorator)
add_subdirectory(10_Facade)
add_subdirectory(11_Flyweight)
add_subdirectory(12_Proxy)
add_subdirectory(13_Chain_of_Responsibility)
add_subdirectory(14_Command)
add_subdirectory(15_Interpreter)
add_subdirectory(16_Iterator)
add_subdirectory(17_Mediator)